--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "multer": "^1.4.5-lts.1",
     "remove-accents": "^0.4.4"
   }
