--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "multer": "^1.4.5-lts.1",
-    "remove-accents": "^0.4.4"
+    "remove-accents": "^0.4.4",
+    "sanitize-filename": "^1.6.3"
   }
 }
