--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "imghost",
+  "name": "daneecloud",
   "version": "1.0.0",
-  "description": "Image Host",
+  "description": "Online filesystem",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
