--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
   "author": "DaneeSkripter",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
     "express-rate-limit": "^6.7.0",
+    "express-session": "^1.17.3",
+    "mongoose": "^6.8.0",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "remove-accents": "^0.4.4",
-    "sanitize-filename": "^1.6.3"
+    "sanitize-filename": "^1.6.3",
+    "uuid": "^9.0.0"
   }
 }
