--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "mongoose": "^6.8.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
