--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-flash": "^0.0.2",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
+    "is-image": "^3.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.1",
     "multer": "^1.4.5-lts.1",
