--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "cloudname": "DaneeCloud",
+    "cloudurl": "https://cloud.daneeskripter.tk",
     "port": 5026,
     "uploadsfolder": "/uploads/"
 }
