--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "is-image": "^3.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.3",
+    "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
+    "node-os-utils": "^1.3.7",
     "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
