--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "daneecloud",
-  "version": "dev",
+  "version": "1.0.0",
   "description": "Online filesystem",
   "main": "index.js",
   "scripts": {
