docs: update g-action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,8 @@ jobs:
         uses: TriPSs/conventional-changelog-action@v3
         with:
           github-token: ${{ secrets.TOKEN }}
-          AUTHOR: "daneeskripter"
+          git-user-name: "daneeskripter"
+          git-user-email: ${{ secrets.EMAIL }}
           output-file: "CHANGELOG.MD"
 
       - name: Create Release
