--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "colors": "^1.4.0",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-rate-limit": "^6.7.0",
-    "express-session": "^1.17.3",
     "is-audio": "^0.0.0",
     "is-image": "^3.1.0",
     "is-video": "^1.0.1",
@@ -27,7 +27,7 @@
     "multer": "^1.4.5-lts.1",
     "node-os-utils": "^1.3.7",
     "nodemailer": "^6.9.1",
-    "passport": "^0.6.0",
+    "passport": "^0.5.3",
     "passport-local": "^1.0.0",
     "remove-accents": "^0.4.4",
     "request": "^2.88.2",
