--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "is-video": "^1.0.1",
     "md5": "^2.3.0",
     "method-override": "^3.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.1.0",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
