--- a/config.json
+++ b/config.json
@@ -4,5 +4,7 @@
     "port": 5000,
     "uploadsfolder": "/uploads/",
     "logtofile": false,
-    "registerip": true
+    "registerip": false,
+    "richpresenceclientid": "1086270274451808366",
+    "richpresencelogo": "logo"
 }
