--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
     "uploadsfolder": "/uploads/",
     "logtofile": false,
     "registerip": false,
-    "disableRegister": false
+    "disableRegister": false,
+    "enableRecaptcha": false
 }
