--- a/.github/workflows/serverupdate.yml
+++ b/.github/workflows/serverupdate.yml
@@ -11,20 +11,13 @@ on:
 
 jobs:
   build:
-
     runs-on: self-hosted
-
     strategy:
       matrix:
         node-version: [16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+    - run: pm2 stop daneecloud
     - run: npm i
-    - run: pm2 restart daneecloud
+    - run: pm2 start daneecloud
