--- a/.github/workflows/devserverupdate.yml
+++ b/.github/workflows/devserverupdate.yml
@@ -17,6 +17,8 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
+    - name: Stash current code
+      run: git stash
     - name: Get DEV code
       run: git pull origin dev
     - name: Stop DaneeCloud DEV
