--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "body-parser": "^1.20.2",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
-    "cookie-session": "^2.1.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "express-flash": "^0.0.2",
     "express-rate-limit": "^7.2.0",
+    "express-session": "^1.18.0",
     "is-audio": "^0.0.0",
     "is-image": "^3.1.0",
     "is-video": "^1.0.1",
@@ -31,7 +31,7 @@
     "multer": "^1.4.5-lts.1",
     "node-os-utils": "^1.3.7",
     "nodemailer": "^6.9.12",
-    "passport": "^0.5.3",
+    "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "remove-accents": "^0.5.0",
     "sanitize-filename": "^1.6.3",
